# swedish_semantic_audio_filtering

./: .gitignore  README.md  add_source_to_manifest.py  concat_custom_datasets.py  create_pretty_plot.ipynb  entity_dist_analysis.ipynb  entity_dist_analysis.py  move_hf_set.py  outline.md  prepare_data_for_filtering.zsh  process_data_for_filtering.py  process_hf_dataset.py  process_hf_dataset_eval.py  pyproject.toml  requirements.txt  results.md  run_commonvoice_eval.zsh  run_fleurs_eval.zsh  test.py  whisper_evaluation.py  whisper_finetuning.py
filtering/: apply_filering.py  dataset.py  filtering.py  logger.py  model.py  test_filtering.ipynb  test_filtering_model.py  text_encoder.py  train_filtering_model.py  trainer.py
filtering/configs/: base_config.yaml  dataset.yaml  model.yaml
filtering/notebook/: filtering_notebook.ipynb
playground/: test_model.ipynb
plots/: create_pretty_plot.ipynb  create_training_time_hist.ipynb  entity_dist_analysis.py
tests/: test_filtering_model.py
text2speech/: config.py  elevenlabs_available_voices.py  elevenlabs_push_to_hf.py  elevenlabs_tts.py  elevenlabs_tts_utils.py  fb_convert_flac2wav.py  fb_m4t_tts.py  fb_m4t_tts_utils.py  fb_push_to_hf.py
text_generation/: generate_text.ipynb  generate_text.py  sources.md
utils/: async_correct_extracted_entities.py  correct_extracted_entities.py  create_missed_entities_dataset.ipynb  create_missed_entities_dataset.py  evaluation_utils.py  extract_entities_from_cand.py  extract_entitites_from_cvf.py  finetuning_utils.py  manifest_utils.py  text_preprocessing_utils.py
(+146 files in other folders)
